--- a/EXERCICIOS/EX-022/fundo006.html
+++ b/EXERCICIOS/EX-022/fundo006.html
@@ -12,6 +12,9 @@
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
+            
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
